# AI-ML

./: .gitignore
gnoc_automation_flow/: .gitignore  README.md  crewai_flow.html  email_template_sample.html  poem.txt  priority.txt  pyproject.toml
gnoc_automation_flow/src/gnoc_automation_flow/: chatbot_app.py  main.py  main_gemini.py  priority_main.py  types.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/google_crew/: google_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/jira_creation_crew/: jira_creation_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/priority_crew/: priority_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/priority_identification_crew/: priority_identification_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/send_google_crew/: send_google_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/send_google_no_data_crew/: send_google_no_data_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/send_insensitive_notification_crew/: send_insensitive_notification_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/crews/status_page_creation_crew/: status_page_creation_crew.py
gnoc_automation_flow/src/gnoc_automation_flow/google_doc/: fetch_all_file_type_gdrive.py  fetch_document.py  google_authentication.py  upload_doc.py
gnoc_automation_flow/src/gnoc_automation_flow/html/: index.html  script.js  styles.css
gnoc_automation_flow/src/gnoc_automation_flow/model/: model_classes.py  status_page.py
gnoc_automation_flow/src/gnoc_automation_flow/tools/: custom_tool.py
(+19 files in other folders)
